--- a/styles/main.css
+++ b/styles/main.css
@@ -29,7 +29,7 @@ header h1 {
 
 header p {
   font-family: 'Abel', sans-serif;
-  color:#2f2963;
+  color:#030206;
   text-align: center;
   font-size: 35px;
 }
