--- a/styles/global.css
+++ b/styles/global.css
@@ -17,7 +17,7 @@ body {
 
 /*Styling for About Me page*/
 .aboutp {
-  color: #2e4756;
+  color: #0d1418;
   padding: 4em;
   line-height: 1.8;
   font-size: 20px;
